Basic formatting Extract modal

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,8 +21,8 @@
         <p id="cur-book-text">Ausgewähltes Buch: <span class="grey-d4s2pdf" id="cur-book">lädt...</span></p>
         <p id="converting-text">Konvertiert: <span class="grey-d4s2pdf" id="cur-converting">lädt...</span></p>
 
-        <div class="progress">
-            <div class="determinate" style="width: 0%"></div>
+        <div id="progress">
+            <div id="progress-bar" class="determinate" style="width: 0%"></div>
         </div>
 
         <div style="display: none" id="convert-details">
