Did some fixes to the project
Bypassed UI blockages of digi4school and migrated to new manifest version

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -34,9 +34,11 @@
         <a id="convert-btn" class="waves-effect waves-light btn">Konvertieren</a>
 
         <p class="notice">Benutzung auf eigene Verantwortung!</p>
-        <span>Logo (c) Digi4School</span>
-        <p>Erstellt von <a href="https://strukteon.net/">strukteon</a>, fix von <a href="https://github.com/quif/">quif</a></p>
+        <span>Logo &copy Digi4School</span>
+        <p>Erstellt von <a href="https://strukteon.net/">strukteon</a><br>fix von <a href="https://github.com/quif/">quif</a><br>updated/fixed von <a href="https://github.com/Alphayeeeet">Alphayeeeet</a></p>
     </main>
+
+    
 
 </body>
 </html>
